--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -1,40 +1,41 @@
-#Home{
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    width: 100%;
-    overflow: hidden;
-    display: flex;
-    align-items: center;
+#home{
+    background-image: url('../../Assets/home.avif');
+    /* Source  https://unsplash.com/photos/m3m-lnR90uM */
+    height: 100vh;
+    background-size: cover;
+    color: var(--white);
+    align-items: flex-start;
     justify-content: center;
-    background: linear-gradient(0.34turn, #0e59b4, #10152c);
-    background-repeat: no-repeat;
-  }
-
-img{
-  height: 100vh;
-  width: 100vw;
 }
 
-#links{
-  z-index: 3;
-  color: white;
-  top: 50%;
-  left: 50%;
-  display: flex;
-  flex-direction: column;
-  padding: 20px;
-  gap: 25px;
+#home-content{
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+    text-transform: uppercase;
 }
 
-#links button{
-  background-color:#00c0c3 ;
-  border: none;
-  padding: 10px;
-  border-radius: 50px;
-  width: 110%;
+#home h1{
+    color: var(--primary-color);
+    font-size: 90px;
 }
 
-#links button p{
-  
+#home p{
+    font-size: 24px;
+    font-weight: 500;
+}
+
+#CTA{
+    background-color: var(--white);
+    width: 150px;
+    padding: 10px;
+    color: black;
+    font-weight: bolder;
+    text-align: center;
+    transition: .4s;
+}
+
+#CTA:hover{
+    color: var(--primary-color);
+    transform: scale(1.08);
 }
