--- a/src/App.css
+++ b/src/App.css
@@ -21,12 +21,14 @@ body{
     font-size: 16px;
     background-color: var(--primary-bg-color);
     color:var(--white);
+    overflow-x: hidden;
 }
 
 section{
     display: flex;
     flex-direction: column;
     align-items: center;
+    overflow: hidden;
 }
 
 nav, section{
@@ -39,6 +41,10 @@ nav, section{
 
 ul{
     list-style: none;
+}
+
+svg{
+  width: 30px;
 }
 
 /* ===== Scrollbar CSS ===== */
@@ -63,7 +69,7 @@ ul{
     border: 1px solid var(--lighter-bg-color);
   }
 
-  @media screen and (min-width: 480px) {
+  @media screen and (min-width: 700px) {
   nav, section {
     padding: 0px 120px;
   }
