--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -11,8 +11,22 @@
     font-weight: 600;
     text-transform: uppercase;
     letter-spacing: 2px;
+    /* background-color: var(--primary-bg-color); */
 }
 
+#nav.add-background{
+    background-color: var(--primary-bg-color);
+}
+
+.desktop{
+    display: none;
+}
+
+#mobile svg{
+    width: 40px;
+    fill: white;
+    color: white;
+}
 
 ul{
     display: flex;
@@ -53,6 +67,12 @@ ul{
     display: flex;
     align-content: center;
     justify-content: center;
+    transition: 1s;
+}
+
+#nav-cart:hover{
+    transform: scale(1.1);
+    cursor: pointer;
 }
 
 #nav-cart div{
@@ -67,4 +87,47 @@ ul{
     align-items: center;
     justify-content: center;
     font-size: 70%;
+}
+
+#mobile-nav{
+    position: absolute;
+    top:0;
+    height: 100vh;
+    width: 100vw;
+    background: var(--primary-bg-color);
+    z-index: 20;
+}
+
+.mobile-nav-hide{
+    left: -1000px;
+    transition: 1s;
+}
+
+.mobile-nav-show{
+    left:0;
+    transition: 1s;
+}
+
+#mobile-nav ul{
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+   display: flex;
+   flex-direction: column;
+}
+
+#mobile-nav svg{
+    position: absolute; top: 0;
+    right: 0;
+}
+
+@media screen and (min-width: 700px) {
+  #mobile{
+    display: none;
+  }
+  .desktop{
+    display: flex;
+  }
 }
