--- a/src/Pages/Checkout/Checkout.css
+++ b/src/Pages/Checkout/Checkout.css
@@ -7,12 +7,24 @@
 }
 
 #order-summary{
+  display: flex;
+  flex-direction: column;
     align-self: flex-start;
     align-items: center;
     text-align: center;
     background: var(--lighter-bg-color);
     padding: 20px;
     border-radius: 5px;
+    gap: 10px;
+}
+
+#order-summary a{
+  background-color: var(--primary-color);
+  padding: 10px;
+}
+
+#order-summary a:hover{
+  transform: scale(1.05);
 }
 
 #Checkout ul{
@@ -69,8 +81,17 @@
     flex-direction: column-reverse;text-align: center;
     padding: 90px 0px;
   }
+  #order-summary{
+    align-self: center;
+  }
   .checkout-item{
     flex-direction: column;
+    align-items: center;
+  }
+  .checkout-item-info{
+    width: 100%;
+    flex-direction: column;
+    text-align: center;
   }
 }
 
@@ -78,14 +99,8 @@
   #Checkout li img{
     width: 100%;
   }
-  #order-summary{
-    align-self: center;
-  }
-  .checkout-item-info{
-    width: 100%;
-    flex-direction: column;
-    text-align: center;
-  }
+  
+  
   .checkout-item-info .right{
     align-items: center;
   }
