Added a few things to the about section as well as the lorem text for product page

--- a/src/Pages/About/About.css
+++ b/src/Pages/About/About.css
@@ -5,6 +5,11 @@
     background-size: cover;
     color: var(--white);
     justify-content: center;
+    text-align: center;
+}
+
+#About div{
+    width: 80%;
 }
 
 #About h2{
