--- a/src/Components/Item/Item.css
+++ b/src/Components/Item/Item.css
@@ -1,39 +1,38 @@
-.item{
-    display: flex;
-    flex-direction: column;
-    gap: 5px;
-    background-color: var(--lighter-bg-color);
-    color: var(--white);
-    height: 225px;
-    width: 225px;
-    transition: .7s;
-    overflow: hidden;
-    border-radius: 10px;
-    border: none;
+.item {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+  background-color: var(--lighter-bg-color);
+  color: var(--white);
+  width: 100%;
+  transition: 0.7s;
+  overflow: hidden;
+  border-radius: 10px;
+  border: none;
 }
 
-.item:hover{
-    background-color: var(--primary-color);
-    color: var(--white);
-    transform: scale(1.01);
+.item:hover {
+  background-color: var(--primary-color);
+  color: var(--white);
+  transform: scale(1.01);
 }
 
-.item:hover p{
-    color: var(--primary-bg-color);
+.item:hover p {
+  color: var(--primary-bg-color);
 }
 
-.item img{
-    height:125px;
-    max-width: 100%;
-    background-position: center;
-    background-size: cover;
+.item img {
+  height: 125px;
+  max-width: 100%;
+  background-position: center;
+  background-size: cover;
 }
 
-.item .content{
-    padding: 10px;
+.item .content {
+  padding: 10px;
 }
 
-.item p{
-    color: var(--primary-color);
-    font-weight: bold;
+.item p {
+  color: var(--primary-color);
+  font-weight: bold;
 }
