--- a/src/Components/Navbar/Navbar.scss
+++ b/src/Components/Navbar/Navbar.scss
@@ -11,6 +11,7 @@
   font-weight: 600;
   text-transform: uppercase;
   letter-spacing: 2px;
+  width: 100%;
   svg {
     width: 40px;
     fill: white;
