--- a/src/App.scss
+++ b/src/App.scss
@@ -65,13 +65,13 @@ ul {
   background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
   width: 100vw;
   transition: 0.6s;
-  right: 100%;
+  left: 100%;
   &:hover {
     cursor: pointer;
   }
   filter: blur(1.5rem);
   &.show {
-    right: 0%;
+    left: 0%;
   }
 }
 
