--- a/src/Components/Cart/Cart.scss
+++ b/src/Components/Cart/Cart.scss
@@ -20,6 +20,15 @@
     transition: 1s;
     right: 0;
   }
+  .top {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+    .close {
+      position: static;
+    }
+  }
 }
 
 .cart-icon {
@@ -51,16 +60,51 @@
   flex-direction: column;
   justify-content: space-between;
   height: 100%;
+  width: 100%;
   gap: 40px;
+  .empty {
+    width: 100%;
+    margin-top: auto;
+  }
   ul {
     display: flex;
     flex-direction: column;
-    li {
+    overflow-y: auto;
+    li.cart-item {
       display: flex;
       flex-direction: column;
       justify-content: center;
+      gap: 4px;
+      padding: 12px 0;
+      border-bottom: 1px solid #fff;
       img {
         width: 100%;
+        height: 150px;
+        object-fit: cover;
+      }
+      .product-actions {
+        font-weight: bold;
+        display: flex;
+        align-items: center;
+        gap: 12px;
+        justify-content: space-between;
+        .left {
+          display: flex;
+          align-items: center;
+          gap: 8px;
+        }
+        button {
+          width: fit-content;
+          height: fit-content;
+          padding: 0;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          background-color: transparent;
+          svg {
+            width: 20px;
+          }
+        }
       }
     }
   }
