--- a/src/Pages/Product/Product.scss
+++ b/src/Pages/Product/Product.scss
@@ -8,19 +8,31 @@
   .left {
     display: grid;
     gap: 10px;
-    grid-template-columns: repeat(5, 1fr);
+    grid-template-columns: repeat(4, 1fr);
     grid-template-rows: 5fr 1fr;
     grid-template-areas:
-      "showcase showcase showcase showcase showcase"
-      ". . . . .";
+      "showcase showcase showcase showcase "
+      ". . . . ";
     .showcase {
       grid-area: showcase;
+      border: none;
+      image-rendering: crisp-edges;
+      image-rendering: -moz-crisp-edges; /* Firefox */
+      image-rendering: -o-crisp-edges; /* Opera */
+      image-rendering: -webkit-optimize-contrast; /* Webkit (non-standard naming)*/
+      -ms-interpolation-mode: nearest-neighbor; /* IE (non-standard property) */
     }
   }
   img {
     width: 100%;
     height: 100%;
     max-width: 800px;
+    object-fit: cover;
+    border: 2px solid transparent;
+    &:hover,
+    &.active {
+      border: 2px solid var(--primary-color);
+    }
   }
   .product-details {
     width: 100%;
