--- a/src/Components/Item/Items.scss
+++ b/src/Components/Item/Items.scss
@@ -34,6 +34,10 @@
   margin-top: 40px;
   .item {
     width: 100%;
+    img {
+      height: 275px;
+      object-fit: cover;
+    }
   }
   @media screen and (min-width: 1024px) {
     display: grid;
